Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
1.17.0
-
None
Description
Scenarios TestEncryptionWithKMSIntegration and SecurityITest.TestEncryptionWithKMSIntegrationMultipleServers from the security-itest reliably fail in some network configurations. The error looks like below:
I20230828 12:24:12.427765 20192 mini_ranger_kms.cc:279] Ranger KMS bound to 36383 I20230828 12:24:12.427812 20192 mini_ranger_kms.cc:280] Ranger KMS URL: http://127.19.184.20:51048 I20230828 12:24:12.427848 20192 mini_ranger_kms.cc:206] Time spent starting Ranger KMS: real 4.807s user 0.008s sys 0.139s I20230828 12:24:12.427896 20192 mini_ranger_kms.cc:388] {"name":"kuduclusterkey", "cipher":"AES/CTR/NoPadding","length":128,"description":"kuduclusterkey"} I20230828 12:24:12.427939 20192 mini_ranger_kms.cc:392] 127.19.184.20:36383/kms/ v1/keys E20230828 12:24:12.428130 20192 mini_ranger_kms.cc:397] src/kudu/integration-tests/security-itest.cc:993: Failure Failed Bad status: Network error: Failed to create cluster key: curl error: Couldn't connect to server: Failed to connect to 127.19.184.20 port 36383: Connection refused I20230828 12:24:12.428778 20192 mini_ranger_kms.cc:59] Stopping Ranger KMS... I20230828 12:24:12.781246 20192 mini_ranger_kms.cc:61] Stopped Ranger KMS
It seems the issue is related to the expected and the actual interface that Ranger KMS server binds to.
I'm attaching full logs of the failed tests scenarios just in case.