src/kudu/ranger/mini_ranger.cc
@@ -194,6 +194,7 @@ Status MiniRanger::StartRanger() {
     LOG(INFO) << "Using host: " << host_;
     std::vector<string> args({
         JoinPathSegments(java_home_, "bin/java"),
+        "-Djava.net.preferIPv4Stack=true",      // ensure IPv4 is used
         "-Dproc_rangeradmin",
         Substitute("-Dhostname=$0", host_),
         Substitute("-Dlog4j.configuration=file:$0",
